[gd_scene load_steps=3 format=2]

[ext_resource path="res://Bomb/Explosion.gd" type="Script" id=1]
[ext_resource path="res://Bomb/Assets/Bomb.png" type="Texture" id=2]

[node name="Explosion" type="Area2D"]
collision_layer = 16
collision_mask = 47
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
vframes = 3
hframes = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.0944672, 0.0944672 )

[node name="LifeTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true
autostart = true
[connection signal="area_entered" from="." to="." method="_on_Explosion_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Explosion_body_entered"]
[connection signal="timeout" from="LifeTimer" to="." method="_on_LifeTimer_timeout"]
